# comfyui-agent-skill

./: .gitignore  00-说明索引.md  01-项目背景.md  02-目标与范围.md  03-架构与边界.md  04-实施任务.md  05-执行提示词.md  CHANGELOG.md  CHANGELOG.zh-CN.md  MAINTAINER.md  README.md  README.zh-CN.md  SKILL.md  VENDORING.md  progress.md  pyproject.toml  task_plan.md
.github/workflows/: ci.yml
assets/workflows/: ace_step_15_music.json  klein_edit.config.json  klein_edit.json  ltx-23-t2v.config.json  ltx-23-t2v.json  ltx_23_i2v_distilled.config.json  ltx_23_i2v_distilled.json  ltx_23_t2v_distill.config.json  ltx_23_t2v_distilled.json  qwen3_tts.config.json  qwen3_tts.json  qwen_image_2512_4step.config.json  qwen_image_2512_4step.json  z_image_turbo.json
docs/internal/: README.md  findings.md  progress.md  task_plan.md
references/: cli.md  extension.md  workflows.md
references/prompt_enhancement/: character.md  image_to_image.md  reference_to_image.md
review/: IMPLEMENTATION_SUMMARY.md  PLAN_IMAGE_TO_IMAGE.md
scripts/: analyze_workflow.py  requirements.txt  run.py  sync_package_assets.py  test_error_cases.py
scripts/comfy_api_simplified/: __init__.py  api.py  exceptions.py  workflow.py
scripts/comfyui/: __main__.py  cli.py  cli_admin.py  cli_generate.py  cli_validate.py  config.py  preflight.py
scripts/comfyui/assets/workflows/: ace_step_15_music.config.json  klein_edit.json  ltx-23-i2v.config.json  ltx-23-i2v.json  ltx_23_i2v_distilled.json  ltx_23_t2v_distill.json  ltx_23_t2v_distilled.config.json  qwen_image_2512_4step.json  z_image_turbo.config.json  z_image_turbo.json
scripts/comfyui/models/: __init__.py  result.py
scripts/comfyui/references/: cli.md  workflow_nodes.md  workflows.md
scripts/comfyui/references/prompt_enhancement/: text_to_speech.md
scripts/comfyui/services/: executor.py  job_store.py  poller.py  submitter.py  workflow_config.py  z_image_turbo.py
scripts/comfyui/tools/: analyze_workflow.py  import_workflow.py
scripts/tests/: conftest.py  test_analyze_workflow.py  test_cli.py  test_config.py  test_console_script.py  test_docs_entrypoints.py  test_doctor_command.py  test_executor.py  test_executor_qwen3_tts.py  test_import_workflow.py  test_install_mode.py  test_integration.py  test_job_store.py  test_package_resources.py  test_poller.py  test_preflight.py  test_resource_mirror.py  test_result.py  test_submitter.py  test_validate_command.py  test_vendored_comfy_api.py  test_workflow_config.py
