[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "comfyui-agent-skill-mie"
version = "0.1.4"
description = "ComfyUI workflow execution skill for agents with packaged workflows and CLI tooling"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "websockets",
]

[project.scripts]
comfyui-agent-skill-mie = "comfyui.cli:main_module"
comfyui-skill = "comfyui.cli:main_module"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/MieMieeeee/comfyui-agent-skill"
Repository = "https://github.com/MieMieeeee/comfyui-agent-skill"
Issues = "https://github.com/MieMieeeee/comfyui-agent-skill/issues"

# PEP 735 dependency groups — used by `uv sync` / `uv run` (see [tool.uv]).
[dependency-groups]
dev = ["pytest>=7.0"]

[tool.uv]
# `uv sync` from the skill root installs the project + dev group (pytest) by default.
default-groups = ["dev"]

[tool.setuptools]
package-dir = { "" = "scripts" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["scripts"]
include = ["comfyui*", "comfy_api_simplified*"]

[tool.setuptools.package-data]
comfyui = [
    "assets/workflows/*.json",
    "assets/workflows/*.config.json",
    "assets/examples/*.*",
    "assets/input/*.*",
    "references/*.md",
    "references/prompt_enhancement/*.md",
]

[tool.pytest.ini_options]
testpaths = ["scripts/tests"]
pythonpath = ["scripts"]
